--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,6 +18,9 @@
 
   {{template_login_form.submit_field()}}
 </form>
+      <div class="row text-center">
+          <a href="/register">Register here</a>
+      </div>
     </div>
 </div>
 
