--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,15 +13,15 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Virtual Scanner Biobus</a>
+    <a class="navbar-brand" href="/index">Virtual Scanner Biobus</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarColor01">
+    <div class="collapse navbar-collapse" id="navbarColor01" data-toggle="buttons">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="/">Home
+          <a class="nav-link" href="/">Home
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
@@ -49,7 +49,7 @@
 </nav>
     <!-- Game title -->
     {% if template_title %}
-    <div class="container-fluid card bg-info">
+    <div class="card bg-success">
       <h3>{{template_title}}</h3>
       <p> {{template_intro_text}}</p>
     </div>
@@ -63,6 +63,6 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <script src="../static/main.js"></script>
   </body>
 </html>
