--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,11 +2,15 @@
 {% block content %}
 
 <h3>Register here</h3>
-{{form.username(size=27,placeholder="Enter username")}}
-{% for error in form.username.errors %}
+{{template_form.username_field(size=27,placeholder="Enter username")}}
+
+    {% for error in template_form.username_field.errors %}
 <span class="error">[{{error}}]</span>
 {% endfor %}
-
-
+{{template_form.password_field.label}}
+{{template_form.password_field()}}
+{{template_form.password2_field.label}}
+{{template_form.password2_field()}}
+    {{ template_form.submit_field() }}
 
 {% endblock %}
