--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,6 @@
     <title>Biobus Tabletop MR</title>
   </head>
   <body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
@@ -42,6 +41,9 @@
             <a class="dropdown-item" href="/games/8">Game 8: Puzzled by Projection II</a>
           </div>
         </li>
+          <li class="nav-item align-right">
+              <a class="nav-link" href="/logout">Log out</a>
+          </li>
 
       </ul>
     </div>
@@ -60,7 +62,6 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="../static/main.js"></script>
