--- a/app/templates/calibration.html
+++ b/app/templates/calibration.html
@@ -9,8 +9,10 @@
         <h3 id="shim-button" class="tab-selector">Shimming</h3>
     </div>
 -->
-    <div class="container-fluid">
-        <div class="row id display-region">
+    <div class="container-fluid vh-100">
+    <form action="/calibration" method="POST">
+    <!-- Displays row -->
+        <div class="row" id="display-region">
           <div class="col-4" id="fid-region">
               <div id='chart-left' class='chart-left'></div>
           </div>
@@ -21,80 +23,128 @@
                 <div id="chart-right" class="chart-right"></div>
             </div>
         </div>
-    <div class="row">
 
+<!-- Separate parameters row -->
 <div class="row" id="param-panel">
 <div class="col card" id="f0-card">
         <h4 class="font-weight-bold">Central frequency</h4>
         <p>Adjust the central frequency to match the magnet's.</p>
-        <form action="/calibration" method="POST">
-            {{template_f0_form.hidden_tag()}}
+            {{template_calibration_form.hidden_tag()}}
             <div class="form-group">
-              {{template_f0_form.f0_field.label}}
-                {{template_f0_form.f0_field(class_="form-control")}}
+              {{template_calibration_form.f0_field.label}}
+                {{template_calibration_form.f0_field(class_="form-control")}}
                   </div><br>
 
-            {{template_f0_form.submit_field(class_="btn btn-success")}}
+            {{template_calibration_form.submit_field(class_="btn btn-info")}}
 
-        </form>
+
   </div>
 
-
-  <div class="col card" id="shim-card">
+    <div class="col card" id="shim-card">
         <h4 class="font-weight-bold">Shimming</h4>
         <p>Adjust shim currents to make B0 uniform</p>
-        <form action="/calibration" method="POST">
 
             <div class="form-group">
-         {{ template_shim_form.shimx_field.label }}
-        {{ template_shim_form.shimx_field(class_="form-control") }}
+                {{ template_calibration_form.shimx_field.label }} = <output id="shimx_val">0.00</output>
+        {{ template_calibration_form.shimx_field(class_="form-range",step=0.01,oninput="shimx_val.value=this.value") }}
         </div>
             <div class="form-group">
-            {{ template_shim_form.shimy_field.label }}
-        {{ template_shim_form.shimy_field(class_="form-control") }}
+            {{ template_calibration_form.shimy_field.label }} = <output id="shimy_val">0.00</output>
+        {{ template_calibration_form.shimy_field(class_="form-range",step=0.01,oninput="shimy_val.value=this.value") }}
             </div>
         <div class="form-group">
-      {{ template_shim_form.shimz_field.label }}
-      {{ template_shim_form.shimz_field(class_="form-control") }}
+      {{ template_calibration_form.shimz_field.label }} = <output id="shimz_val">0.00</output>
+      {{ template_calibration_form.shimz_field(class_="form-range",step=0.01,oninput="shimz_val.value=this.value") }}
        </div>
-            {{ template_shim_form.submit_field(class_="btn btn-success") }}
-        </form>
+
+            <div class="btn btn-primary">Zero all</div>
+            <div class="btn btn-primary">Autoshim</div>
 
   </div>
+
   <div class="col card" id="rf-card">
         <h4 class="font-weight-bold">RF power</h4>
         <p>Find the RF power output needed for a 90-degree flip angle. </p>
-      <form action="/calibration" method="POST">
 
           <div class="form-group">
-          {{ template_rf_form.tx_amp_field.label }}
-          {{ template_rf_form.tx_amp_field(class_="form-control") }}
+          {{ template_calibration_form.tx_amp_field.label }}
+          {{ template_calibration_form.tx_amp_field(class_="form-control") }}
               </div>
 
           <div class="form-group">
-          {{ template_rf_form.rx_gain_field.label }}
-          {{ template_rf_form.tx_amp_field(class_="form-control") }}
+          {{ template_calibration_form.rx_gain_field.label }}
+          {{ template_calibration_form.tx_amp_field(class_="form-control") }}
               </div>
-          {{ template_rf_form.submit_field(class_="btn btn-success") }}
-      </form>
-  </div>
-
 
 </div>
-        <div class="row" id="run-reset-region">
-            <div class="btn btn-success col">START</div>
-            <div class="btn btn-danger col">STOP</div>
+</div>
+  </form>
+
+        <div class="row">
+        <!-- Column 1:  Shared params -->
+            <div class="col-4 card">
+                <form action="/calibration" method="POST">
+                        <div class="row">
+                            <div class="col">
+                                {{ template_params_form.tr_field.label }}
+                                {{ template_params_form.tr_field(class_="form-control") }}
+                            </div>
+                            <div class="col">
+                                {{ template_params_form.readout_time_field.label }}
+                                {{ template_params_form.readout_time_field(class_="form-control") }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                            {{ template_params_form.num_avg_field.label }}
+                            {{ template_params_form.num_avg_field(class_="form-control") }}
+                            </div>
+                            <div class="col">
+                        {{ template_params_form.num_rep_field.label }}
+                        {{ template_params_form.num_rep_field(class_="form-control") }}
+                            </div>
+                        </div>
+                        {{ template_params_form.submit_field(class_="btn btn-info") }}
+
+                </form>
+            </div>
+        <!-- Column 2: Main buttons -->
+            <div class="col-4" id="button-region">
+                <div class="row h-50">
+                  <div class="btn btn-success btn-lg col">START</div>
+                  <div class="btn btn-danger btn-lg col">STOP</div>
+                </div>
+                <!-- Saving current parameters, loading previous ones -->
+                <div class="row h-50">
+
+                    <div class="btn btn-info btn-lg col" onclick="">Save current</div>
+
+                  <div class="btn btn-light btn-lg col">Load previous</div>
+                </div>
+            </div>
+
+        <!-- Column 3: Display options (checkboxes) -->
+            <div class="col-4">
+                <form action="/calibration" method="POST">
+                        <div class="form-check form-switch form-control">
+                          {{ template_disp_form.autoscale_field(class_="form-check-input") }}
+                          {{ template_disp_form.autoscale_field.label(class_="form-check-label") }}
+                        </div>
+                        <div class="form-check form-switch form-control">
+                          {{ template_disp_form.show_prev_field(class_="form-check-input") }}
+                          {{ template_disp_form.show_prev_field.label(class_="form-check-label text-left") }}
+                        </div>
+                </form>
+
+            </div>
+
         </div>
-        <div class="row" id="save-load-region">
-            <!-- Saving current parameters, loading previous ones -->
-            <div class="btn btn-info col">Save current</div>
-            <div class="btn btn-light col">Load previous</div>
-        </div>
+
+
 
     </div>
 
 
-</div>
 </div>
 
      <!-- Javascript for Plotly integration (required)-->
@@ -106,6 +156,7 @@
          Plotly.plot('chart-center',graphs_center,{});
          let graphs_right = {{ graphJSON_right | safe}};
          Plotly.plot("chart-right",graphs_right,{});
-
      </script>
+
+
 {% endblock %}
