--- a/app/templates/calibration.html
+++ b/app/templates/calibration.html
@@ -10,7 +10,7 @@
     </div>
 -->
     <div class="container-fluid vh-100">
-    <form action="/calibration" method="POST">
+    <form action="/calibration" method="POST" id="calibration_form">
     <!-- Displays row -->
         <div class="row" id="display-region">
           <div class="col-4" id="fid-region">
@@ -29,13 +29,13 @@
 <div class="col card" id="f0-card">
         <h4 class="font-weight-bold">Central frequency</h4>
         <p>Adjust the central frequency to match the magnet's.</p>
+        <p id="declarer" class="text-info">Debug message may be printed here</p>
             {{template_calibration_form.hidden_tag()}}
             <div class="form-group">
               {{template_calibration_form.f0_field.label}}
-                {{template_calibration_form.f0_field(class_="form-control")}}
+                {{template_calibration_form.f0_field(class_="form-control", value=session['calibration']['f0']/1e6)}}
                   </div><br>
 
-            {{template_calibration_form.submit_field(class_="btn btn-info")}}
 
 
   </div>
@@ -45,21 +45,21 @@
         <p>Adjust shim currents to make B0 uniform</p>
 
             <div class="form-group">
-                {{ template_calibration_form.shimx_field.label }} = <output id="shimx_val">0.00</output>
-        {{ template_calibration_form.shimx_field(class_="form-range",step=0.01,oninput="shimx_val.value=this.value") }}
+                {{ template_calibration_form.shimx_field.label }} = <output id="shimx_val">{{ session['calibration']['shimx'] }}</output>
+        {{ template_calibration_form.shimx_field(class_="form-range",id='shimx',step=0.01,value=session['calibration']['shimx'],onchange="shimx_val.value=this.value") }}
         </div>
             <div class="form-group">
-            {{ template_calibration_form.shimy_field.label }} = <output id="shimy_val">0.00</output>
-        {{ template_calibration_form.shimy_field(class_="form-range",step=0.01,oninput="shimy_val.value=this.value") }}
+            {{ template_calibration_form.shimy_field.label }} = <output id="shimy_val">{{ session['calibration']['shimy'] }}</output>
+        {{ template_calibration_form.shimy_field(class_="form-range",id='shimy',step=0.01, value=session['calibration']['shimy'],onchange="shimy_val.value=this.value") }}
             </div>
         <div class="form-group">
-      {{ template_calibration_form.shimz_field.label }} = <output id="shimz_val">0.00</output>
-      {{ template_calibration_form.shimz_field(class_="form-range",step=0.01,oninput="shimz_val.value=this.value") }}
+      {{ template_calibration_form.shimz_field.label }} = <output id="shimz_val">{{ session['calibration']['shimz'] }}</output>
+      {{ template_calibration_form.shimz_field(class_="form-range",id='shimz',step=0.01, value=session['calibration']['shimz'],onchange="shimz_val.value=this.value") }}
        </div>
-
-            <div class="btn btn-primary">Zero all</div>
-            <div class="btn btn-primary">Autoshim</div>
-
+        <div class="row">
+            <div class="btn btn-primary col" id="zero-shims">Zero shims</div>
+            <div class="btn btn-primary col">Autoshim</div>
+        </div>
   </div>
 
   <div class="col card" id="rf-card">
@@ -73,8 +73,13 @@
 
           <div class="form-group">
           {{ template_calibration_form.rx_gain_field.label }}
-          {{ template_calibration_form.tx_amp_field(class_="form-control") }}
-              </div>
+          {{ template_calibration_form.rx_gain_field(class_="form-control") }}
+          </div>
+
+          <div class="form-group">
+              <div class="btn btn-info" id="run-fa">Run FA Calibration </div>
+          </div>
+
 
 </div>
 </div>
@@ -109,20 +114,19 @@
                 </form>
             </div>
         <!-- Column 2: Main buttons -->
-            <div class="col-4" id="button-region">
+        <div class="col-4" id="button-region">
                 <div class="row h-50">
-                  <div class="btn btn-success btn-lg col">START</div>
-                  <div class="btn btn-danger btn-lg col">STOP</div>
+                  <div class="btn btn-success btn-lg col" id="run-scan">START</div>
+                  <div class="btn btn-danger btn-lg col" id="stop-scan">STOP</div>
                 </div>
                 <!-- Saving current parameters, loading previous ones -->
                 <div class="row h-50">
-
-                    <div class="btn btn-info btn-lg col" onclick="">Save current</div>
-
+                    {{template_calibration_form.submit_field(class_="btn btn-info btn-lg col",form="calibration_form")}}
+                    <!-- input class="btn btn-info btn-lg col" type='submit' form="calibration_form" value="Save"></inpu-->
                   <div class="btn btn-light btn-lg col">Load previous</div>
                 </div>
-            </div>
 
+        </div>
         <!-- Column 3: Display options (checkboxes) -->
             <div class="col-4">
                 <form action="/calibration" method="POST">
@@ -150,12 +154,15 @@
      <!-- Javascript for Plotly integration (required)-->
      <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
      <script type="text/javascript">
-         let graphs_left = {{ graphJSON_left | safe }};
-         Plotly.plot('chart-left',graphs_left,{});
-         let graphs_center = {{ graphJSON_center | safe }};
-         Plotly.plot('chart-center',graphs_center,{});
-         let graphs_right = {{ graphJSON_right | safe}};
-         Plotly.plot("chart-right",graphs_right,{});
+         function plot_initial() {
+                 let graphs_left = {{ graphJSON_left | safe }};
+                 Plotly.plot('chart-left', graphs_left, {});
+                 let graphs_center = {{ graphJSON_center | safe }};
+                 Plotly.plot('chart-center', graphs_center, {});
+                 let graphs_right = {{ graphJSON_right | safe}};
+                 Plotly.plot("chart-right", graphs_right, {});
+         }
+         plot_initial()
      </script>
 
 
