Instant response of change in calibration parameters and game 5 skeleton

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -80,6 +80,8 @@
     <script src="../static/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
 
-    <script src="../static/calibration.js"></script>
+
+  {% block additional_imports %}
+  {% endblock %}
   </body>
 </html>
