--- a/app/templates/game5.html
+++ b/app/templates/game5.html
@@ -1,7 +1,141 @@
-{% extends "game.html" %}
-{% block fields %}
+{% extends "base.html" %}
+{% block content %}
+    <div class="container-fluid vh-100">
+    <div class="row">
+        <div class="col-4" id="display-game5">
+            <div class="row h-25 card bg-light">
+                <div id='chart-spin' class='chart-spin'></div>
+          </div>
+            <div class="row h-25 card">
+                <div id='chart-mx' class='chart'></div>
+            </div>
+            <div class="row h-25 card">
+                <div id='chart-my' class='chart'></div>
+            </div>
+            <div class="row h-25 card">
+                <div id='chart-mz' class='chart'></div>
+            </div>
+        </div>
+        <div class="col-8 h-100" id="fields-game5">
+            <form action="/games/5" method="POST">
+                <div class="row card">
+                         <h3 class="card-header">Main field</h3>
+                         <div class="card-body">
+                        {{ template_game_form.b0_onoff_field(class="btn-check",id="b0-button",autocomplete="off") }}
+                        <label class="btn btn-outline-info" for="b0-button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor" class="bi bi-magnet-fill" viewBox="0 0 16 16">
+                          <path d="M15 12h-4v3h4v-3ZM5 12H1v3h4v-3ZM0 8a8 8 0 1 1 16 0v8h-6V8a2 2 0 1 0-4 0v8H0V8Z"/>
+                        </svg>
+                        </label>
+                             </div>
+                    </div>
+                <br>
+                <div class="row card">
+                    <h3 class="card-header">RF</h3>
+                    <div class="card-body">
+                    <div class="row">
+                        <div class="col-4">{{ template_game_form.flip_angle_field.label }}</div>
+                        <div class="col-8">{{ template_game_form.flip_angle_field(class="form-range",step=1) }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">{{ template_game_form.rf_phase_field.label }}</div>
+                        <div class="col-8">{{ template_game_form.rf_phase_field(class="form-range",step=1) }}</div>
+                    </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row card">
+                    <h3 class="card-header">Receive coil</h3>
+                    <div class="card-body row">
+                    <div class="col-4">
+                        <!-- input type="checkbox" class="btn-check" name="options-outlined" id="rx-button" autocomplete="off" -->
+                        {{ template_game_form.rx_onoff_field(class="btn-check",id="rx-button",autocomplete="off") }}
+                        <label class="btn btn-outline-info" for="rx-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor" class="bi bi-bullseye" viewBox="0 0 16 16">
+                               <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                                <path d="M8 13A5 5 0 1 1 8 3a5 5 0 0 1 0 10zm0 1A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
+                                <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8z"/>
+                                <path d="M9.5 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+                            </svg>
+                         </label>
+                    </div>
+
+                        <div class="col-8 btn-group btn-group-toggle" role="group">
+                          <button type="button" class="btn btn-info">x</button>
+                          <button type="button" class="btn btn-light">y</button>
+                        </div>
+
+                        {{ template_game_form.rx_dir_field.label }}
+                        {{ template_game_form.rx_dir_field(class="form-control") }}
+
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-6 card bg-light">
+                        <h3 class="card-header">Set initial magnetization</h3>
+                        <div class="card-body">
+                            <!-- Add in options to set initial magnetization value. -->
+
+                            <div class="btn-group btn-group-toggle" role="group">
+                              <button type="button" class="col btn btn-info btn-outline-info text-primary">x</button>
+                              <button type="button" class="col btn btn-light btn-outline-info text-primary">y</button>
+                              <button type="button" class="col btn btn-light btn-outline-info text-primary">z</button>
+                              <button type="button" class="col btn btn-light btn-outline-info text-primary">0</button>
+                            </div>
+                            <div class="row">
+                            <div class="col">
+                                {{ template_game_form.m_theta_field.label }}
+                                {{ template_game_form.m_theta_field(class="form-control") }}
+                            </div>
+                            <div class="col">
+                                {{ template_game_form.m_phi_field.label }}
+                                {{ template_game_form.m_phi_field(class="form-control") }}
+                            </div>
+                            <div class="col">
+                                {{ template_game_form.m_size_field.label }}
+                                {{ template_game_form.m_size_field(class="form-control") }}
+                            </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="col-6 card bg-light" id="game5-button-region">
+                        <h3 class="card-header">Controls</h3>
+                        <div class="row card-body">
+                            <div class="btn btn-light btn-outline-primary btn-lg col">REST</div>
+                            {{template_game_form.submit_field(class_="btn btn-success btn-lg col")}}
+                            <div class="btn btn-danger btn-lg col" id="">PAUSE</div>
+                        </div>
+                        <!-- Saving current parameters, loading previous ones -->
 
 
+                        </div>
+                    </div>
 
+            </form>
+
+        </div>
+
+    </div>
+
+    </div>
+
+     <!-- Javascript for Plotly integration (required)-->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script type="text/javascript">
+         function plot_initial() {
+                 let graph_spin = {{ graphJSON_spin | safe }};
+                 Plotly.plot('chart-spin', graph_spin, {});
+                 let graph_mx = {{ graphJSON_mx | safe }};
+                 Plotly.plot('chart-mx', graph_mx, {});
+                 let graph_my = {{ graphJSON_my | safe }};
+                 Plotly.plot('chart-my', graph_my, {});
+                 let graph_mz = {{ graphJSON_mz | safe }};
+                 Plotly.plot('chart-mz', graph_mz, {});
+         }
+         plot_initial()
+     </script>
 
 {% endblock %}
