Login fix and Game 5 looks

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,7 +51,7 @@
 </nav>
     <!-- Game title -->
     {% if template_title %}
-    <div class="card bg-success">
+    <div class="card bg-info d-flex align-items-center justify-content-center">
       <h3>{{template_title}}</h3>
       <p> {{template_intro_text}}</p>
     </div>
