--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block content %}
 
 <div class="container-fluid">
@@ -7,18 +6,24 @@
   <img src="../static/img/virtual_scanner_logo.png" class="mx-auto d-block w-25" alt="Virtual Scanner Logo">
 </div>
   <div class="row"><h3 class="text-center">Login</h3></div>
-  <div class="row text-center">
+  <div class="row justify-content-center">
+  <div class="col-4">
+
 
 <form action="/login" method="POST">
-  {{template_login_form.hidden_tag()}}
+    {{ template_login_form.csrf_token }}
+  {{ template_login_form.hidden_tag() }}
   {{template_login_form.username_field.label}}
-  {{template_login_form.username_field()}}
-
+  {{template_login_form.username_field(class="form-control")}}
+    {% for error in template_login_form.username_field.errors %}
+<span class="error">[{{error}}]</span>
+{% endfor %}
   {{template_login_form.password_field.label}}
-  {{template_login_form.password_field()}}
-
+  {{template_login_form.password_field(class="form-control")}}
   {{template_login_form.submit_field()}}
 </form>
+
+  </div>
       <div class="row text-center">
           <a href="/register">Register here</a>
       </div>
